ci: add GitHub Actions CI/CD workflow
- Add CI workflow for testing on macOS
- Add Release workflow for auto publish to npm
- Configure npm provenance for security
- Add conventional-changelog for version management

--- a/package.json
+++ b/package.json
@@ -21,13 +21,18 @@
   },
   "devDependencies": {
     "@opencode-ai/plugin": "latest",
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "conventional-changelog-cli": "^5.0.0"
   },
   "peerDependencies": {
     "typescript": "^5"
   },
   "engines": {
     "bun": ">=1.0.0"
+  },
+  "publishConfig": {
+    "access": "public",
+    "provenance": true
   },
   "files": [
     "index.ts",
