refactor: migrate plugin to .opencode/plugin directory
- Move plugin code to .opencode/plugin/index.ts for local plugin loading
- Remove old index.ts and src/ directory (was for npm package)
- Use fire-and-forget logging to prevent initialization hang
- Update package.json main/types to point to new location

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "author": "Trong Nguyen",
   "license": "MIT",
   "type": "module",
-  "main": "index.ts",
-  "types": "index.ts",
+  "main": ".opencode/plugin/index.ts",
+  "types": ".opencode/plugin/index.ts",
   "keywords": [
     "opencode",
     "plugin",
@@ -35,7 +35,6 @@
     "provenance": true
   },
   "files": [
-    "index.ts",
-    "src/"
-  ]
+		".opencode/"
+	],
 }
