🔧 chore(test): setup test infrastructure with bun test

--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
   "peerDependencies": {
     "typescript": "^5"
   },
+  "scripts": {
+    "test": "bun test ./.opencode/plugin/__tests__"
+  },
   "engines": {
     "bun": ">=1.0.0"
   },
